<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gingham"
    tools:context=".MainActivity">

    <!--  Judul Project  -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="    android:background=&quot;#F7FBFF&quot;&#xA;" />

    <TextView
        android:id="@+id/tvSnackProjectBack"
        android:layout_width="309dp"
        android:layout_height="141dp"
        android:layout_marginTop="56dp"

        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:shadowColor="#6CCBEA"

        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/snack_project"

        android:textAlignment="center"
        android:textColor="#FFE76B"
        android:textSize="49sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSnackProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:shadowColor="#6CCBEA"

        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/snack_project"

        android:textAlignment="center"
        android:textColor="#EF7097"
        android:textSize="46sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="@id/tvSnackProjectBack"
        app:layout_constraintBottom_toBottomOf="@id/tvSnackProjectBack"
        app:layout_constraintStart_toStartOf="@id/tvSnackProjectBack"
        app:layout_constraintEnd_toEndOf="@id/tvSnackProjectBack" />

    <!--  Keterangan Project -->
    <ImageView
        android:id="@+id/imgDiscoverBox"
        android:layout_width="0dp"
        android:layout_height="58dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"

        app:srcCompat="@drawable/discover_box"
        app:layout_constraintTop_toBottomOf="@id/tvSnackProject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvKeterangan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:text="@string/keterangan"
        android:textColor="@color/brown_text"
        android:textSize="17sp"
        android:translationX="9dp"

        app:layout_constraintTop_toTopOf="@id/imgDiscoverBox"
        app:layout_constraintBottom_toBottomOf="@id/imgDiscoverBox"
        app:layout_constraintStart_toStartOf="@id/imgDiscoverBox"
        app:layout_constraintEnd_toEndOf="@id/imgDiscoverBox" />

    <!-- Gambar Kucing (Basiileaf) -->
    <ImageView
        android:id="@+id/imgCat1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/desc_cat"
        android:scaleType="fitCenter"

        android:translationX="-55dp"
        android:translationY="-2dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgDiscoverBox"

        app:layout_constraintStart_toStartOf="@+id/imgDiscoverBox"
        app:layout_constraintTop_toTopOf="@+id/imgDiscoverBox"
        app:layout_constraintVertical_bias="0.485"
        app:srcCompat="@drawable/basiileaf" />

    <!--  Gambar Magnum Bread  -->
    <ImageView
        android:id="@+id/imgSnack"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"

        android:contentDescription="@string/desc_snack"
        android:scaleType="fitCenter"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDiscoverBox"
        app:srcCompat="@drawable/magnumbread_decorated" />

    <!-- Button My Project   -->
    <Button
        android:id="@+id/btnMyProject"
        android:layout_width="0dp"
        android:layout_height="56dp"

        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"

        android:backgroundTint="@color/button_pink"

        android:fontFamily="@font/fredoka_bold"
        android:strokeColor="@color/button_stroke"

        android:text="@string/my_project"
        android:textColor="@color/brown_text"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSnack" />

    <!--  Footer  -->
    <ImageView
        android:id="@+id/imgFooterBadge"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        android:layout_margin="36dp"

        android:layout_marginBottom="18dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/badge"

        app:layout_constraintTop_toBottomOf="@id/btnMyProject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <TextView
        android:id="@+id/tvCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/fredoka_bold"
        android:text="@string/creator"

        android:textColor="@color/brown_text"
        android:textSize="18sp"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="@id/imgFooterBadge"
        app:layout_constraintBottom_toBottomOf="@id/imgFooterBadge"
        app:layout_constraintStart_toStartOf="@id/imgFooterBadge"
        app:layout_constraintEnd_toEndOf="@id/imgFooterBadge" />
</androidx.constraintlayout.widget.ConstraintLayout>
